Add submit button
Signed-off-by: Luc Perkins <luc@timber.io>

--- a/lib/vrl/wasm/assets/index.html
+++ b/lib/vrl/wasm/assets/index.html
@@ -30,6 +30,18 @@
                 <textarea id="program" class="textarea has-fixed-size" placeholder="Your VRL program" />
               </div>
 
+              <br />
+
+              <div class="field is-grouped">
+                <div class="control">
+                  <button id="submit" class="button is-primary">Submit</button>
+                </div>
+
+                <span>
+                  Or hit <strong>Enter</strong>
+                </span>
+              </div>
+
               <div id="output-box">
                 <p class="title">
                   Output
